<resources>
    <string name="app_name">Beillen</string>
    <string name="home_tab_device">Devices</string>
    <string name="home_tab_me">Me</string>
    <string name="home_add_new_device">Add new device</string>
    <string name="home_primary_devices">Primary devices</string>
    <string name="home_device_name">ELAU</string>
    <string name="home_device_description">High-performance power bank</string>
    <string name="home_device_power">%1$d%%</string>
    <string name="home_bluetooth_connected">Bluetooth connected</string>
    <string name="home_bluetooth_connecting">Connecting to Bluetooth</string>
    <string name="home_bluetooth_disconnected">Bluetooth disconnected</string>
    <string name="home_device_arrow">›</string>
    <string name="bluetooth_permission_denied">Bluetooth permission not granted</string>
    <string name="bluetooth_permission_settings">Enable Bluetooth permission in system settings</string>
    <string name="scan_add_device_title">Add device</string>
    <string name="scan_searching_hint">Scanning. Keep your phone close to the device</string>
    <string name="scan_help_message">Turn on the device, move your phone close to it, and try again</string>
    <string name="scan_connect_success">Connected</string>
    <string name="me_user_name">Beillen</string>
    <string name="me_user_email">support@beillen.com</string>
    <string name="me_switch_language">Switch language</string>
    <string name="me_language_simplified_chinese">Simplified Chinese</string>
    <string name="me_notifications">Notifications</string>
    <string name="me_about_app">About APP</string>
    <string name="me_app_version">V.2.4.0</string>
    <string name="me_user_agreement">User agreement</string>
    <string name="me_privacy_policy">Privacy policy</string>
    <string name="me_copyright">&#169; 2026 Beillen Jiade Technology</string>
    <string name="me_profile_picture">Profile picture</string>
    <string name="me_feature_unavailable">%1$s is not available yet</string>
    <string name="power_remaining_time">Remaining output time: %1$d H %2$d M</string>
    <string name="power_temperature">Device temperature</string>
    <string name="power_temperature_value">%1$.1f°C</string>
    <string name="power_output">Output</string>
    <string name="power_input">Input</string>
    <string name="power_port_c1">C1</string>
    <string name="power_port_c2">C2</string>
    <string name="power_port_a1">A</string>
    <string name="power_value_voltage">%1$.1fV</string>
    <string name="power_value_current">%1$.1fA</string>
    <string name="power_value_voltage_current_text">%1$s / %2$s</string>
    <string name="power_empty_voltage">--V</string>
    <string name="power_empty_current">--A</string>
    <string name="power_cable_info">Cable information</string>
    <string name="power_cable_value">3A-60W</string>
    <string name="power_charge_protocol">Charging protocol</string>
    <string name="power_device_model">Device model</string>
    <string name="power_unknown_value">--</string>
    <string name="power_low_current_mode">Low-current mode</string>
    <string name="power_screen_settings">Screen settings</string>
    <string name="power_battery_info">Battery information</string>
    <string name="power_cycle_count">Cycle count</string>
    <string name="power_cycle_count_value">%1$d cycles</string>
    <string name="power_current_capacity">Current capacity</string>
    <string name="power_capacity_value">%1$dmAh</string>
    <string name="power_low_current_updated">Low-current mode %1$s</string>
    <string name="power_enabled">enabled</string>
    <string name="power_disabled">disabled</string>
    <string name="power_command_failed">Device is not connected; settings were not sent</string>
    <string name="setting_in_progress">Applying settings…</string>
    <string name="power_device_disconnected_notice">Device connection lost</string>
    <string name="power_preview_remaining">剩余可输出时间：10 H 30 M</string>
    <string name="power_preview_temperature">32.4°C</string>
    <string name="power_preview_metrics">12.0V / 2.3A</string>
    <string name="power_preview_health">100%</string>
    <string name="power_main_title">Beillen</string>
    <string name="device_setting_title">Device settings</string>
    <string name="device_setting_charge_mode">Charging mode</string>
    <string name="device_setting_smart_mode">Smart mode</string>
    <string name="device_setting_device_name">Device name</string>
    <string name="device_setting_default_name">ELAU PD888</string>
    <string name="device_setting_model">设备型号</string>
    <string name="device_setting_model_value">ELAU PD888</string>
    <string name="device_setting_certification">Certifications</string>
    <string name="device_setting_certification_value">Six certifications</string>
    <string name="device_setting_serial_number">Production serial number</string>
    <string name="device_setting_serial_number_value">ASHUXB1E51301932</string>
    <string name="device_setting_factory_reset">Factory reset</string>
    <string name="device_setting_factory_reset_message">The device name and charging mode will be reset. Continue?</string>
    <string name="device_setting_factory_reset_success">Factory settings restored</string>
    <string name="device_setting_delete">Delete device</string>
    <string name="device_setting_delete_message">You will need to add the device again after deletion. Delete it?</string>
    <string name="device_setting_delete_success">Device deleted</string>
    <string name="device_setting_edit_name_title">Edit device name</string>
    <string name="device_setting_name_hint">Enter device name</string>
    <string name="device_setting_name_empty">Device name cannot be empty</string>
    <string name="device_setting_cancel">Cancel</string>
    <string name="device_setting_confirm">Confirm</string>
    <string name="charging_mode_title">Charging mode</string>
    <string name="charging_mode_smart">Smart mode</string>
    <string name="charging_mode_smart_desc">Automatically identifies the device and matches fast-charging protocols for faster charging, up to 310W. Suitable when you need a quick recharge.</string>
    <string name="charging_mode_smart_tag_fast">Fast charging</string>
    <string name="charging_mode_smart_tag_control">Smart temperature control</string>
    <string name="charging_mode_standard">Standard mode</string>
    <string name="charging_mode_standard_desc">A stable standard charging mode for daily use that protects battery life while charging normally.</string>
    <string name="charging_mode_standard_tag_health">Battery health</string>
    <string name="charging_mode_standard_tag_night">Night protection</string>
    <string name="charging_mode_custom">Custom mode</string>
    <string name="charging_mode_custom_desc">Set charging power, cutoff level, and protection strategy yourself. Suitable for advanced users.</string>
    <string name="charging_mode_custom_tag_parameter">Parameter adjustment</string>
    <string name="charging_mode_custom_tag_strategy">Custom strategy</string>
    <string name="charging_mode_tip">* Switch to Standard mode when the device will be unused for a long time to extend battery life</string>
    <string name="custom_mode_title">Custom mode</string>
    <string name="custom_mode_channel_power_value">%1$dW</string>
    <string name="custom_mode_saved">Custom charging mode saved and applied</string>
    <string name="custom_mode_name_label">Mode name</string>
    <string name="custom_mode_name_hint">Enter mode name</string>
    <string name="custom_mode_name_required">Please enter a mode name</string>
    <string name="custom_mode_total_power">Total power</string>
    <string name="custom_mode_total_power_value">Output %1$dW/310W</string>
    <string name="custom_mode_output">Output</string>
    <string name="custom_mode_decrease">Decrease power</string>
    <string name="custom_mode_increase">Increase power</string>
    <string name="custom_mode_list_title">Charging mode</string>
    <string name="custom_mode_add">+ Custom mode</string>
    <string name="custom_mode_select">Select custom mode</string>
    <string name="custom_mode_channel_output">%1$s  OUT:%2$dW</string>
    <string name="custom_mode_output_power">OUT:%1$dW</string>
    <string name="login_brand_name">Beillen</string>
    <string name="login_add_avatar">Add avatar</string>
    <string name="login_name_hint">Enter your name</string>
    <string name="login_guest">Guest login</string>
    <string name="login_default_guest_name">Beillen</string>
    <string name="login_avatar_description">Guest avatar</string>
    <string name="login_avatar_save_failed">Unable to save the avatar. Please try again.</string>
    <string name="start_brand_slogan">Smart charging</string>
    <string name="start_copyright">&#169; Beillen Jiade Technology</string>
    <string name="statistics_detail_title">Detailed data</string>
    <string name="statistics_total_output">Total output</string>
    <string name="statistics_port_output">Port output</string>
    <string name="about_title">About Beillen</string>
    <string name="about_brand_name">Beillen</string>
    <string name="about_app_version">APP version</string>
    <string name="about_website">Website</string>
    <string name="about_phone">Phone</string>
    <string name="about_email">Email</string>
    <string name="about_filing">APP filing number</string>
    <string name="about_website_display" translatable="false">www.beillen.com</string>
    <string name="about_phone_number" translatable="false">400-888-8888</string>
    <string name="about_email_address" translatable="false">support@beillen.com</string>
    <string name="about_filing_number">Guangdong ICP filing No. xxxxxxxx</string>
    <string name="about_user_agreement">User agreement</string>
    <string name="about_privacy_policy">Privacy policy</string>
    <string name="about_copyright">&#169; 2026 Beillen Jiade Technology</string>
    <string name="account_title">Account management</string>
    <string name="account_user_name">Username</string>
    <string name="account_bound_phone">Bound phone</string>
    <string name="account_email">Email address</string>
    <string name="account_login_password">Login password</string>
    <string name="account_cancellation">Delete account</string>
    <string name="account_default_user_name">Alex River</string>
    <string name="account_default_phone" translatable="false">+86 138 **** 0000</string>
    <string name="account_default_email" translatable="false">support@beillen.com</string>
    <string name="account_password_mask" translatable="false">********</string>
    <string name="help_title">Help</string>
    <string name="help_step_number_1" translatable="false">1.</string>
    <string name="help_step_number_2" translatable="false">2.</string>
    <string name="help_step_number_3" translatable="false">3.</string>
    <string name="help_step_number_4" translatable="false">4.</string>
    <string name="help_step_number_5" translatable="false">5.</string>
    <string name="help_step_1">Keep the device nearby: Place the device within 1–2 meters of your phone.</string>
    <string name="help_step_2">Check the status: Make sure the device is on, has sufficient power, and Bluetooth is in pairing mode (see the manual for pairing mode).</string>
    <string name="help_step_3">Enable permissions: Turn on Bluetooth on your phone (some Android phones also require location permission).</string>
    <string name="help_step_4">Check the network: Make sure your phone’s network connection is working.</string>
    <string name="help_step_5">Restart and retry: If it still does not work, restart/reset the device and add it again (see the manual for restarting/resetting the device).</string>
    <string name="help_note">Note: If you cannot find your device model in the device list, the device does not support app management.</string>
</resources>