<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/account_page_background" android:orientation="vertical">

    <com.aleyn.mvvm.widget.ComToolBar
        android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:background="@color/account_page_background" app:tit_text="@string/account_title" />

    <ScrollView android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"
        android:clipToPadding="false" android:fillViewport="true" android:overScrollMode="never">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="vertical" android:paddingStart="24dp" android:paddingTop="40dp"
            android:paddingEnd="24dp" android:paddingBottom="32dp">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:background="@drawable/bg_account_card" android:elevation="2dp" android:orientation="vertical"
                android:paddingTop="1dp" android:paddingBottom="1dp">

                <com.aleyn.mvvm.widget.MyInformationView android:id="@+id/item_user_name"
                    android:layout_width="match_parent" android:layout_height="81dp" app:is_show_line="true"
                    app:left_icon="@mipmap/ic_user_profile" app:left_text="@string/account_user_name"
                    app:left_text_color="@color/account_label_text" app:left_text_size="14sp"
                    app:left_sub_text="@string/account_default_user_name" app:left_sub_text_color="@color/account_value_text"
                    app:left_sub_text_size="16sp" app:right_arrow_icon="@mipmap/ic_chevron_right" />

                <com.aleyn.mvvm.widget.MyInformationView android:id="@+id/item_phone"
                    android:layout_width="match_parent" android:layout_height="81dp" app:is_show_line="true"
                    app:left_icon="@mipmap/ic_phone_outline_dark" app:left_text="@string/account_bound_phone"
                    app:left_text_color="@color/account_label_text" app:left_text_size="14sp"
                    app:left_sub_text="@string/account_default_phone" app:left_sub_text_color="@color/account_value_text"
                    app:left_sub_text_size="16sp" app:right_arrow_icon="@mipmap/ic_chevron_right" />

                <com.aleyn.mvvm.widget.MyInformationView android:id="@+id/item_email"
                    android:layout_width="match_parent" android:layout_height="81dp" app:is_show_line="true"
                    app:left_icon="@mipmap/ic_email" app:left_text="@string/account_email"
                    app:left_text_color="@color/account_label_text" app:left_text_size="14sp"
                    app:left_sub_text="@string/account_default_email" app:left_sub_text_color="@color/account_value_text"
                    app:left_sub_text_size="16sp" app:right_arrow_icon="@mipmap/ic_chevron_right" />

                <com.aleyn.mvvm.widget.MyInformationView android:id="@+id/item_password"
                    android:layout_width="match_parent" android:layout_height="81dp" app:is_show_line="true"
                    app:left_icon="@mipmap/ic_lock" app:left_text="@string/account_login_password"
                    app:left_text_color="@color/account_label_text" app:left_text_size="14sp"
                    app:left_sub_text="@string/account_password_mask" app:left_sub_text_color="@color/account_value_text"
                    app:left_sub_text_size="16sp" app:right_arrow_icon="@mipmap/ic_chevron_right" />

                <com.aleyn.mvvm.widget.MyInformationView android:id="@+id/item_cancellation"
                    android:layout_width="match_parent" android:layout_height="71dp" app:is_show_line="false"
                    app:left_icon="@mipmap/ic_user_disabled" app:left_text="@string/account_cancellation"
                    app:left_text_color="@color/account_value_text" app:left_text_size="17sp"
                    app:right_arrow_icon="@mipmap/ic_chevron_right" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
